[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "LLM_scratch"
authors = [{name = "daiyada"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]